# fileserver

./: .gitignore  Dockerfile  README.md  crawl.sh  docker-compose.yaml  pyproject.toml
fileserver/: app.py  crawler.py  sqlite.py
