[tool.poetry]
name = "fileserver"
version = "1.0.0"
description = "File server"
authors = ["Bob California"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.8"
fastapi = "^0.68.0"
aiofiles = "^0.7.0"
uvicorn = "^0.14.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pylint = "^2.9.6"
isort = "^5.9.3"
mypy = "^0.910"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
